init work on Rules/Approvals/Lists - wip

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -105,6 +105,20 @@
                         </li>
                         
                         <li class="nav-item mt-3">
+                            <h6 class="sidebar-heading text-muted px-3">Approval System</h6>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('approval_workflows') }}">
+                                <i class="fas fa-route"></i> Approval Workflows
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('approval_instances') }}">
+                                <i class="fas fa-clipboard-list"></i> Approval Instances
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item mt-3">
                             <h6 class="sidebar-heading text-muted px-3">Tools</h6>
                         </li>
                         <li class="nav-item">
